# linkml-project-template

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING.md.jinja  Makefile  README.md  README.md.jinja  about.yaml  about.yaml.jinja  mkdocs.yml  pyproject.toml  pyproject.toml.jinja
.github/workflows/: main.yaml
examples/: README.md.jinja
src/linkml/: my_datamodel.yaml  my_datamodel.yaml.jinja
src/my-datamodel/: __init__.py
src/my-datamodel/datamodel/: my_datamodel.py
src/my_datamodel/schema/: my_datamodel.yaml.jinja
utils/: get-value.sh
