[tool.poetry]
name = "linkml-project-template"
version = "0.1.0"
description = "Enter description of your project here"
readme = "README.md"
authors = [""]
license = "MIT"
include = ["README.md", "src/*"]

[tool.poetry.dependencies]
python = "^3.9"

linkml = "^1.2.15"
mkdocs-mermaid2-plugin = "^0.6.0"

[tool.poetry.dev-dependencies]
mkdocs-material = "^8.2.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
